syntax = "proto3";

package api.wafTop.v1;

import "api/wafTop/v1/message.proto";
import "google/api/annotations.proto";

option go_package = "wafconsole/api/wafTop/v1;v1";
option java_multiple_files = true;
option java_package = "api.wafTop.v1";

service WafApp {
	rpc CreateWafApp (ChangeServerRequest) returns (CreateWafAppReply) {
		option (google.api.http)  = {
			post: "/app/wafTop/v1/wafApp"
			body: "*"
		};
	};
	rpc UpdateWafApp (ChangeServerRequest) returns (UpdateWafAppReply) {
		option (google.api.http) = {
			patch: "/app/wafTop/v1/wafApp"
			body: "*"
		};
	};
	rpc DeleteWafApp (DeleteRequest) returns (DeleteReply) {
		option (google.api.http) = {
			delete: "/app/wafTop/v1/wafApp"
		};
	};
	rpc GetWafApp (GetWafAppRequest) returns (GetWafAppReply) {
		option (google.api.http) = {
			get: "/app/wafTop/v1/wafApp/{id}"
		};
	};
	rpc ListWafApp (ListWafAppRequest) returns (ListWafAppReply) {
		option (google.api.http) = {
			get: "/app/wafTop/v1/wafApps"
		};
	};
}
